--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
     "@supabase/supabase-js": "^2.91.0",
+    "@types/react-signature-canvas": "^1.0.7",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "react": "^19.2.3",
+    "react-big-calendar": "^1.19.4",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
+    "react-router-dom": "^7.13.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
